--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "mongoose": "^8.16.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
